<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RSS Reader</string>
    <string name="manage_feeds">Manage Feeds</string>
    
    <string name="action_refresh">Refresh</string>
    <string name="action_new_fold">New folder</string>
    <string name="action_new_feed">New feed</string>
    <string name="action_mng_feed">Manage feeds</string>
    <string name="action_settings">Settings</string>
    
    <string name="context_edit">Edit</string>
    <string name="context_merge">Combine</string>
    <string name="context_del">Delete</string>
    <string name="context_move_feed">Move</string>
	
    <string name="all_feeds">All feeds</string>
    <string name="no_folder">Unsorted</string>
    <string name="feed_icon">Feed icon</string>
    <string name="resize_desc">Resize</string>
    
    <string name="download_start">Starting Download…</string>
    <string name="download_prefix">Downloading</string>
    <string name="download_parse_prefix">Parsing</string>
    <string name="download_clean">Cleanup…</string>
    <string name="download_done">Finished.</string>
    <string name="download_offline">No Connection.</string>
    <string name="download_bad_url">Bad URL for</string>
    <string name="download_bad_conn">Couldn\'t reach</string>
    <string name="download_bad_file">Couldn\'t create cache file.</string>
    <string name="download_bad_write">Problem writing to cache.</string>
    
    <string name="undo">Undo</string>
    <string name="restored">Restored</string>
    
    <string name="del_fold_0">Unable to delete.</string>
    <string name="del_fold_1">folder deleted.</string>
    <string name="del_fold_many">folders deleted.</string>
    <string name="del_feed_0">Unable to delete.</string>
    <string name="del_feed_1">feed deleted.</string>
    <string name="del_feed_many">feeds deleted.</string>
    
    <string name="dialog_fold_rename">Rename Folder</string>
    <string name="dialog_fold_name">Folder name</string>
    <string name="dialog_feed_url">URL</string>
    <string name="dialog_feed_name">Name (optional)</string>
    <string name="dialog_feed_folder">Folder</string>
    <string name="dialog_feed_no_fold">None</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
</resources>