<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:paddingBottom="16dp"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText
        android:id="@+id/dialog_feed_name"
        android:hint="@string/dialog_feed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />
    
    <EditText
        android:id="@+id/dialog_feed_url"
        android:hint="@string/dialog_feed_url"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_feed_name" />
    
    <TextView
        android:id="@+id/dialog_feed_fold_label"
        android:text="@string/dialog_feed_folder"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        android:paddingLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_feed_url" />
    
    <Spinner
        android:id="@+id/dialog_feed_fold_sel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_below="@id/dialog_feed_fold_label" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/dialog_feed_fold_sel" />
    
</RelativeLayout>